# aegis

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/aegis_platform/: __init__.py  bench.py  demo.py
backend/src/aegis_platform/api/: app.py  serializers.py  state.py
backend/src/aegis_platform/cloud/: __init__.py  adk.py  cloudrun.py  factory.py  gemini.py  rca.py
backend/src/aegis_platform/common/: __init__.py  config.py  schemas.py
backend/src/aegis_platform/eval/: __init__.py  gate.py  judge.py
backend/src/aegis_platform/fault_injector/: __init__.py  faults.py  world.py
backend/src/aegis_platform/governance/: __init__.py  audit.py  gate.py  policy.py
backend/src/aegis_platform/immunity/: __init__.py  fleet.py  generalizer.py  signature.py  store.py
backend/src/aegis_platform/model_service/: __init__.py  cost.py  router.py  service.py  types.py
backend/src/aegis_platform/model_service/providers/: __init__.py  fake.py
backend/src/aegis_platform/operator/: __init__.py  diagnoser.py  executor.py  loop.py  runbook.py
backend/src/aegis_platform/rag_chat/: __init__.py
backend/src/aegis_platform/telemetry/: __init__.py  detectors.py  incidents.py  monitor.py
backend/tests/: test_api.py  test_bench.py  test_cloud_factory.py  test_cloud_gemini.py  test_cloud_rca.py  test_eval.py  test_executor.py  test_governance.py  test_immunity.py  test_model_service.py  test_operator.py  test_telemetry.py
dashboard/: .dockerignore  .gcloudignore  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: CoverageGauge.tsx  FleetMap.tsx  GovernanceModal.tsx  HealingPipeline.tsx  HexReadout.tsx  HudFrame.tsx  HudRuler.tsx  MttrSpark.tsx  Reactor.tsx  Timeline.tsx  Waveform.tsx
dashboard/lib/: api.ts  types.ts  (+4 more)
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  OVERVIEW.md  SLIDES.md  SUBMISSION.md  THREEJS_PLAN.md
idea/: aegis.md
infra/: access.sh  deploy.sh
(+17 files in other folders)
