[project]
name = "aegis-platform"
version = "0.1.0"
description = "Aegis — the autonomous SRE for AI services (DevOps x AI Agent Hackathon 2026)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "numpy>=1.26",
    "scipy>=1.13",
    "structlog>=24.1",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
]

[project.optional-dependencies]
# Lightweight runtime cloud mode — just the mandatory AI deps (Gemini + ADK).
# Installed in the Cloud Run image so AEGIS_DEMO_MODE=false genuinely uses Gemini/ADK.
cloud = [
    "google-genai>=1.0",
    "google-adk>=1.0",
    "google-cloud-run>=0.10",
]
# Heavy Google Cloud / eval / data deps live here so the testable core runs without GCP.
gcp = [
    "google-genai>=1.0",
    "google-adk>=1.0",
    "google-cloud-run>=0.10",
    "google-cloud-aiplatform[evaluation]>=1.60",
    "google-cloud-bigquery>=3.25",
    "google-cloud-firestore>=2.16",
    "google-cloud-pubsub>=2.21",
    "opentelemetry-exporter-gcp-trace>=1.6",
    "elasticsearch>=8.14",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --cov=aegis_platform --cov-report=term-missing"
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# (str, Enum) is intentional and widely supported; we don't require StrEnum.
ignore = ["UP042"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
ignore_missing_imports = true
